--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -1,8 +1,9 @@
 channels:
     - conda-forge
 dependencies:
-    - python=2.7
+    - python=3.5
     - numpy
+    - networkx
     - matplotlib
     - pandas
     - numba
